fixed overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -73,10 +73,9 @@ hr {
 
 /* ============================ start navbar ============================*/
 
-.navbar-logo:hover {
-    animation: color-rotate 1s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+.navbar-container {
+    z-index: 2;
+    position: absolute;
 }
 
 .navbar-logo:hover {
@@ -87,23 +86,14 @@ hr {
 
 .navbar-container .navbar-logo {
     width: 40%;
-    padding: 5px;
+    align-items: center;
+    /* horizontal */
     float: left;
 }
 
 .navbar-container .navbar-list {
     width: 60%;
-    padding: 5px;
     float: left;
-}
-
-.navbar-container .container {
-    overflow: hidden;
-    width: 100%;
-    position: fixed;
-    background-color: #313132;
-    color: #ffffff;
-    overflow: hidden;
 }
 
 .navbar-container .container h2 {
@@ -111,8 +101,10 @@ hr {
 }
 
 .navbar-container .navbar .container {
-    width: 100vw;
     height: 8.5vh;
+    overflow: hidden;
+    width: 100%;
+    color: #ffffff;
     position: fixed;
     background-color: #313132;
     display: flex;
@@ -469,6 +461,7 @@ hr {
 /*============================ start portfolio ============================ */
 
 .portfolio {
+    overflow: hidden;
     padding-top: 60px;
     padding-bottom: 60px;
     text-align: center;
@@ -484,6 +477,7 @@ hr {
 }
 
 .portfolio .portfolio-items>div {
+    overflow: hidden;
     width: 33.333%;
     float: left;
     max-height: 300px;
@@ -497,11 +491,7 @@ hr {
 }
 
 .portfolio .portfolio-items>div:hover {
-    transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
+    opacity: 0.5;
 }
 
 .portfolio-images {
@@ -541,10 +531,7 @@ hr {
     color: white;
 }
 
-.contact-me .contact-info .contact-me-address {
-    margin-top: 20px;
-}
-
+.contact-me .contact-info .contact-me-address,
 .contact-me .contact-info .contact-me-details {
     margin-top: 20px;
 }
